reports/stage_reports/Diagramscene_ultima-syz/20251226_120528/tests_report.txt
[stage] tests
[project] C:\Users\lenovo\Desktop\Diagramscene_ultima-syz
[time] 20251226_120528
[meta] cmd: cmd /c "set PATH=D:\Qt\6.10.1\mingw_64\bin;D:\Qt\Tools\mingw1310_64\bin;%PATH% && cd /d C:\Users\lenovo\Desktop\Diagramscene_ultima-syz && cd tests\generated && qmake tests.pro && mingw32-make clean && mingw32-make -f Makefile.Debug && debug\tests.exe && move debug\*.gc* ."
[meta] cwd: C:\Users\lenovo\Desktop\Diagramscene_ultima-syz
[meta] returncode: 2
[meta] timed_out: False
[meta] timeout_s: 600.0

== findings ==
- tests | error | 测试命令执行失败

== stdout (truncated) ==
mingw32-make -f Makefile.Release clean
mingw32-make[1]: Entering directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'
del moc\moc_predefs.h
del moc\moc_diagramscene.cpp moc\moc_diagramtextitem.cpp moc\moc_findreplacedialog.cpp moc\moc_mainwindow.cpp
del moc\test_arrow.moc moc\test_bounding_box.moc moc\test_collision_detection.moc moc\test_coordinate_systems.moc moc\test_deletecommand.moc moc\test_diagrampath.moc moc\test_diagramscene.moc moc\test_edge_cases.moc moc\test_event_handling.moc moc\test_findreplacedialog.moc moc\test_geometry_utils.moc moc\test_group_operations.moc moc\test_integration.moc moc\test_item_factory.moc moc\test_item_properties.moc moc\test_mainwindow.moc moc\test_path_operations.moc moc\test_performance.moc moc\test_rendering.moc moc\test_scene_commands.moc moc\test_scene_management.moc moc\test_selection_behavior.moc moc\test_serialization.moc moc\test_text_operations.moc moc\test_undo_redo.moc moc\test_z_order.moc
del obj\test_arrow.o obj\test_bounding_box.o obj\test_collision_detection.o obj\test_coordinate_systems.o obj\test_deletecommand.o obj\test_diagrampath.o obj\test_diagramscene.o obj\test_edge_cases.o obj\test_event_handling.o obj\test_findreplacedialog.o obj\test_geometry_utils.o obj\test_group_operations.o obj\test_integration.o obj\test_item_factory.o obj\test_item_properties.o obj\test_mainwindow.o obj\test_path_operations.o obj\test_performance.o obj\test_rendering.o obj\test_runner_main.o obj\test_scene_commands.o obj\test_scene_management.o obj\test_selection_behavior.o obj\test_serialization.o obj\test_text_operations.o obj\test_undo_redo.o obj\test_z_order.o obj\arrow.o obj\diagramitem.o obj\diagramitemgroup.o obj\diagrampath.o obj\diagramscene.o obj\diagramtextitem.o obj\findreplacedialog.o obj\mainwindow.o obj\moc_diagramscene.o obj\moc_diagramtextitem.o obj\moc_findreplacedialog.o obj\moc_mainwindow.o
mingw32-make[1]: Leaving directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'
mingw32-make -f Makefile.Debug clean
mingw32-make[1]: Entering directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'
del moc\moc_predefs.h
del moc\moc_diagramscene.cpp moc\moc_diagramtextitem.cpp moc\moc_findreplacedialog.cpp moc\moc_mainwindow.cpp
del moc\test_arrow.moc moc\test_bounding_box.moc moc\test_collision_detection.moc moc\test_coordinate_systems.moc moc\test_deletecommand.moc moc\test_diagrampath.moc moc\test_diagramscene.moc moc\test_edge_cases.moc moc\test_event_handling.moc moc\test_findreplacedialog.moc moc\test_geometry_utils.moc moc\test_group_operations.moc moc\test_integration.moc moc\test_item_factory.moc moc\test_item_properties.moc moc\test_mainwindow.moc moc\test_path_operations.moc moc\test_performance.moc moc\test_rendering.moc moc\test_scene_commands.moc moc\test_scene_management.moc moc\test_selection_behavior.moc moc\test_serialization.moc moc\test_text_operations.moc moc\test_undo_redo.moc moc\test_z_order.moc
del obj\test_arrow.o obj\test_bounding_box.o obj\test_collision_detection.o obj\test_coordinate_systems.o obj\test_deletecommand.o obj\test_diagrampath.o obj\test_diagramscene.o obj\test_edge_cases.o obj\test_event_handling.o obj\test_findreplacedialog.o obj\test_geometry_utils.o obj\test_group_operations.o obj\test_integration.o obj\test_item_factory.o obj\test_item_properties.o obj\test_mainwindow.o obj\test_path_operations.o obj\test_performance.o obj\test_rendering.o obj\test_runner_main.o obj\test_scene_commands.o obj\test_scene_management.o obj\test_selection_behavior.o obj\test_serialization.o obj\test_text_operations.o obj\test_undo_redo.o obj\test_z_order.o obj\arrow.o obj\diagramitem.o obj\diagramitemgroup.o obj\diagrampath.o obj\diagramscene.o obj\diagramtextitem.o obj\findreplacedialog.o obj\mainwindow.o obj\moc_diagramscene.o obj\moc_diagramtextitem.o obj\moc_findreplacedialog.o obj\moc_mainwindow.o
mingw32-make[1]: Leaving directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'
g++ -fno-keep-inline-dllexport --coverage -g -Wall -Wextra -Wextra -dM -E -o moc\moc_predefs.h D:\Qt\6.10.1\mingw_64\mkspecs\features\data\dummy.cpp
D:\Qt\6.10.1\mingw_64\bin\moc.exe -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DQT_WIDGETS_LIB -DQT_SVG_LIB -DQT_GUI_LIB -DQT_TESTLIB_LIB -DQT_CORE_LIB -DQT_TESTCASE_BUILDDIR="\"C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated\"" --include C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated/moc/moc_predefs.h -ID:/Qt/6.10.1/mingw_64/mkspecs/win32-g++ -IC:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated -IC:/Users/lenovo/Desktop/Diagramscene_ultima-syz -ID:/Qt/6.10.1/mingw_64/include -ID:/Qt/6.10.1/mingw_64/include/QtWidgets -ID:/Qt/6.10.1/mingw_64/include/QtSvg -ID:/Qt/6.10.1/mingw_64/include/QtGui -ID:/Qt/6.10.1/mingw_64/include/QtTest -ID:/Qt/6.10.1/mingw_64/include/QtCore -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include/c++ -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include/c++/x86_64-w64-mingw32 -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include/c++/backward -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include-fixed -ID:/Qt/Tools/mingw1310_64/x86_64-w64-mingw32/include test_arrow.cpp -o moc\test_arrow.moc
g++ -c -fno-keep-inline-dllexport --coverage -g -Wall -Wextra -Wextra -fexceptions -mthreads -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DQT_WIDGETS_LIB -DQT_SVG_LIB -DQT_GUI_LIB -DQT_TESTLIB_LIB -DQT_CORE_LIB -DQT_TESTCASE_BUILDDIR="\"C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated\"" -I. -I../../../Diagramscene_ultima-syz -ID:/Qt/6.10.1/mingw_64/include -ID:/Qt/6.10.1/mingw_64/include/QtWidgets -ID:/Qt/6.10.1/mingw_64/include/QtSvg -ID:/Qt/6.10.1/mingw_64/include/QtGui -ID:/Qt/6.10.1/mingw_64/include/QtTest -ID:/Qt/6.10.1/mingw_64/include/QtCore -Imoc -I/include -ID:/Qt/6.10
...(truncated)...

== stderr (truncated) ==
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\moc\moc_predefs.h
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\moc\moc_diagramscene.cpp
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\moc\test_arrow.moc
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\obj\test_arrow.o
test_diagrampath.cpp: In member function 'void TestDiagramPath::testQuadFunction()':
test_diagrampath.cpp:20:69: error: 'Top' is not a member of 'DiagramItem::TransformState'
   20 |     DiagramPath path(nullptr, nullptr, DiagramItem::TransformState::Top, DiagramItem::TransformState::Bottom);
      |                                                                     ^~~
test_diagrampath.cpp:20:103: error: 'Bottom' is not a member of 'DiagramItem::TransformState'
   20 |     DiagramPath path(nullptr, nullptr, DiagramItem::TransformState::Top, DiagramItem::TransformState::Bottom);
      |                                                                                                       ^~~~~~
test_diagrampath.cpp: In member function 'void TestDiagramPath::testConstructor()':
test_diagrampath.cpp:40:75: error: 'Top' is not a member of 'DiagramItem::TransformState'
   40 |     DiagramItem::TransformState startState = DiagramItem::TransformState::Top;
      |                                                                           ^~~
test_diagrampath.cpp:41:73: error: 'Bottom' is not a member of 'DiagramItem::TransformState'
   41 |     DiagramItem::TransformState endState = DiagramItem::TransformState::Bottom;
      |                                                                         ^~~~~~
test_diagrampath.cpp: In member function 'void TestDiagramPath::testUpdatePath()':
test_diagrampath.cpp:56:75: error: 'Top' is not a member of 'DiagramItem::TransformState'
   56 |     DiagramItem::TransformState startState = DiagramItem::TransformState::Top;
      |                                                                           ^~~
test_diagrampath.cpp:57:73: error: 'Bottom' is not a member of 'DiagramItem::TransformState'
   57 |     DiagramItem::TransformState endState = DiagramItem::TransformState::Bottom;
      |                                                                         ^~~~~~
test_diagrampath.cpp: In member function 'void TestDiagramPath::testDrawHead()':
test_diagrampath.cpp:70:75: error: 'Top' is not a member of 'DiagramItem::TransformState'
   70 |     DiagramItem::TransformState startState = DiagramItem::TransformState::Top;
      |                                                                           ^~~
test_diagrampath.cpp:71:73: error: 'Bottom' is not a member of 'DiagramItem::TransformState'
   71 |     DiagramItem::TransformState endState = DiagramItem::TransformState::Bottom;
      |                                                                         ^~~~~~
mingw32-make: *** [Makefile.Debug:14752: obj/test_diagrampath.o] Error 1
